# await

./: .gitignore  .tool-versions  CMakeLists.txt  LICENSE  README.md  aider  autocomplete.bash  autocomplete.fish  autocomplete.zsh  await  await-macos  await.c  build  default.nix  demo  demo.sh.yml  demo1  demo1.yml  dev  generate_demo.sh  meson.build  release  shell.nix
.github/workflows/: build-and-release.yml  build.yaml  c-cpp.yml  tests.yml
autocompletions/: await.bash  await.fish  await.zsh
demo/: 1.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml  generate  template.yml
hooks/: pre-commit
tests/: pyproject.toml  test_await.py
